--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,12 @@
 body {
     margin: 0;
     text-transform: uppercase;
+ 
+        height: 100%;
+
+    
+      //  overflow: hidden; /* Pour éviter les barres de défilement */
+
 }
 
 
