--- a/sass/home.scss
+++ b/sass/home.scss
@@ -38,7 +38,7 @@ gap : 5px;
    .photoLightbox {
     width: 100%;
     /* La moitié de la largeur du viewport */
-    height: 40vw;
+    height: 40vw;;
     /* La moitié de la largeur du viewport, pour former un carré */
     object-fit: cover;
   
