--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,12 @@
 /* The Modal (background) */
 .popup-overlay {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.3764705882);
   justify-content: center;
   align-items: center;
-  top: 10px;
+  top: 0;
   left: 0;
   z-index: 999;
   cursor: pointer;
@@ -80,13 +80,13 @@ label {
   font-weight: 500;
 }
 
-.borderShadow {
-  border-top: 1px solid transparent;
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-}
+/* .borderShadow{
+  border-top : 1px solid transparent;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); 
 
+} */
 .containerPost {
-  margin-top: 40px;
+  margin-top: 100px;
   margin-left: 100px;
   margin-right: 100px;
   /* border-top: 1px solid blueviolet;
@@ -153,7 +153,6 @@ label {
 }
 .containerPost .container-img {
   width: 50%;
-  height: 100vh;
   position: relative;
 }
 @media screen and (max-width: 589px) {
@@ -182,14 +181,15 @@ label {
   top: 4%;
   right: 0;
   transform: translate(-50%, -50%);
-  z-index: 999;
+  z-index: 10;
   cursor: pointer;
   display: none;
 }
-.containerPost .post-image {
+.containerPost .photoLightbox {
   display: flex;
   width: 100%;
   height: 100vh;
+  object-fit: cover;
 }
 .containerPost .attachment-large {
   width: 100%;
@@ -1100,13 +1100,18 @@ width: 25%;
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    position: relative;
     right: 0;
     margin-top: 15px;
+    margin-right: 100px;
+  }
+}
+@media screen and (max-width: 589px) {
+  .burgerMenu {
     margin-right: 40px;
   }
 }
-.burgerMenu .line {
+
+.line {
   width: 80%;
   height: 2px;
   margin-bottom: 10px;
@@ -1131,8 +1136,8 @@ width: 25%;
   .navbar-nav {
     display: none;
     flex-direction: column;
-    z-index: 99;
-    height: 100%;
+    z-index: 999;
+    height: calc(100% - 80px);
     justify-content: center;
     align-items: center;
     background: red;
@@ -1140,8 +1145,7 @@ width: 25%;
     position: fixed;
     width: 100%;
     bottom: 0;
-    top: 80px;
-    margin: 0;
+    margin: 0 !important;
     padding-left: 0;
     padding-top: 100px;
   }
@@ -1196,17 +1200,33 @@ width: 25%;
   color: white;
   text-transform: none;
   top: 50%;
+  left: 14%;
   cursor: pointer;
+  font-size: 11px;
+}
+@media screen and (max-width: 776px) {
+  #lightbox .prevArrow {
+    top: 9%;
+    left: 25%;
+  }
 }
 #lightbox .nextArrow {
   position: fixed;
   color: white;
   text-transform: none;
-  right: 0;
+  right: 15%;
   top: 50%;
+  font-size: 11px;
   cursor: pointer;
 }
-#lightbox .lightbox-contain {
+@media screen and (max-width: 776px) {
+  #lightbox .nextArrow {
+    top: 9%;
+    right: 25%;
+  }
+}
+
+.lightbox-contain {
   position: fixed;
   width: 50%;
   margin: auto;
@@ -1220,7 +1240,7 @@ width: 25%;
    margin-left: 200px;
    margin-right: 200px; */
 }
-#lightbox .lightbox-contain img {
+.lightbox-contain img {
   width: 100%;
   max-width: 100%;
   height: 70vh;
@@ -1228,11 +1248,11 @@ width: 25%;
    height: 100vh; */
   object-fit: cover;
 }
-#lightbox .lightbox-contain .infoPhoto {
+.lightbox-contain .infoPhoto {
   display: flex;
   justify-content: space-between;
 }
-#lightbox .lightbox-contain .infoPhoto p {
+.lightbox-contain .infoPhoto p {
   color: white;
   margin: 0;
 }
@@ -1252,16 +1272,26 @@ body {
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  margin-top: -8px;
   width: 100%;
+  position: fixed;
+  z-index: 99;
+  background-color: white;
+  top: 0;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 600px) {
+  #navigation {
+    top: 0;
+  }
 }
 #navigation #logo {
   height: 13px;
   margin-left: 100px;
 }
-@media screen and (max-width: 785px) {
+@media screen and (max-width: 589px) {
   #navigation #logo {
-    margin-left: 50px;
+    margin-left: 40px;
     height: 10px;
   }
 }
@@ -1285,6 +1315,7 @@ body {
   display: flex;
   justify-content: center;
   border-top: solid 1px black;
+  height: 40px;
 }
 #footer .footerColumn {
   display: flex;
@@ -1323,6 +1354,9 @@ body {
 #footer #menu-footer-menu li a {
   color: black;
   text-decoration: none;
+}
+#footer #menu-footer-menu li a:hover {
+  font-weight: bold;
 }
 #footer .textFooter {
   margin-top: 10px;
