--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,10 +18,12 @@ body {
  
         height: 100%;
 
-    
+//overflow: hidden;
       //  overflow: hidden; /* Pour éviter les barres de défilement */
 
 }
+
+
 
 
 #navigation {
@@ -29,8 +31,18 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    margin-top: -8px;
     width: 100%;
+    position: fixed;
+    z-index: 99;
+    background-color: white;
+top : 0;
+ border-bottom : 1px solid transparent;
+ box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    @media screen and (max-width :600px) {
+        top :0;
+    
+    
+    }
 
  
 
@@ -38,8 +50,8 @@ body {
         height: 13px;
         margin-left: 100px;
 
-        @media screen and (max-width :785px) {
-            margin-left: 50px;
+        @media screen and (max-width :589px) {
+            margin-left: 40px;
             height: 10px;
     }
 
@@ -82,6 +94,7 @@ a {
     display: flex;
     justify-content: center;
     border-top: solid 1px black;
+    height: 40px;
 
     .footerColumn {
         display: flex;
@@ -114,7 +127,7 @@ a {
 
         li {
             margin: 25px;
-            margin-bottom: 10px;
+           margin-bottom: 10px;
             margin-top: 10px;
             @media screen and (max-width:580px) {
 
@@ -125,13 +138,17 @@ a {
                 color: black;
                 text-decoration: none;
 
+                &:hover{
+                    font-weight: bold;
+                }
+
             }
         }
 
     }
 
     .textFooter {
-        margin-top: 10px;
+       margin-top: 10px;
         @media screen and (max-width:580px) {
           
             padding-bottom: 40px;
@@ -150,11 +167,11 @@ a {
 
     img {
         position: relative;
-        height: calc((100vw / 16 * 9) - 80px); /* Soustraire la hauteur de l'en-tête */
-      
+      height: calc((100vw / 16 * 9) - 80px); /* Soustraire la hauteur de l'en-tête */
+  
         width: 100vw;
         object-fit: cover;
-      
+     
             
         }
 
