--- a/sass/modale.scss
+++ b/sass/modale.scss
@@ -4,13 +4,13 @@
 /* The Modal (background) */
 .popup-overlay {
     position:fixed;
-    width: 100%;
-    height:100%;
+    width: 100vw;
+    height:100vh;
     background:#00000060;
 
     justify-content: center;
     align-items:center;
-    top:10px;
+    top:0;
     left:0;
     z-index: 999;
     cursor: pointer;
