--- a/sass/single.scss
+++ b/sass/single.scss
@@ -1,13 +1,14 @@
-.borderShadow{
-    border-top : 1px solid transparent;
+/* .borderShadow{
+  border-top : 1px solid transparent;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); 
-}
+   
+} */
 
 .containerPost {
-margin-top: 40px ;
+margin-top: 100px ;
     margin-left: 100px;
     margin-right: 100px;
- 
+
     @media screen and (max-width: 589px){
         margin-left: 0;
         margin-right: 0;
@@ -20,7 +21,7 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
         justify-content: space-between;
         margin-top: 15px;
         width: 100%;
-
+     
         @media screen and (max-width: 589px){
          flex-wrap: wrap-reverse;
 
@@ -76,7 +77,7 @@ font-size: 25px;
     .container-img {
         // margin-right: 100px;
         width: 50%;
-        height: 100vh;
+    
         position: relative;
         @media screen and (max-width: 589px){
             width: 100%;
@@ -109,7 +110,7 @@ font-size: 25px;
             top: 4%;
             right: 0;
             transform: translate(-50%, -50%);
-            z-index : 999;
+            z-index : 10;
             cursor: pointer;
           display: none;
         
@@ -120,10 +121,11 @@ font-size: 25px;
         
                }
 
-        .post-image{
+        .photoLightbox{
             display: flex;
             width: 100%;
             height: 100vh;
+            object-fit: cover;
             
         }
         @media screen and (max-width: 530px){
@@ -334,6 +336,8 @@ font-size: 25px;
   gap : 5px;
   flex-wrap: wrap;
 
+ 
+
 
   @media screen and (max-width : 576px) {
     grid-template-columns: 1fr;
@@ -355,6 +359,7 @@ font-size: 25px;
             width: 100%;
             /* La moitié de la largeur du viewport */
             height: 40vw;
+         
             /* La moitié de la largeur du viewport, pour former un carré */
             object-fit: cover;
 
@@ -362,7 +367,7 @@ font-size: 25px;
 
    
     @media screen and (max-width : 576px){
-        height: 70vw;
+      height: 70vw;
        }
     
 
